--- a/LeaRun.Application/LeaRun.Application.Web/Areas/DrugConsumableManage/Views/DrugManage/DrugHospitalInfo.cshtml
+++ b/LeaRun.Application/LeaRun.Application.Web/Areas/DrugConsumableManage/Views/DrugManage/DrugHospitalInfo.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "医院/厂商药品信息库";
+    ViewBag.Title = "医院/厂商药品信息库-";
     Layout = "~/Views/Shared/_Index.cshtml";
 }
 <script>
