--- a/LeaRun.Application/LeaRun.Application.Web/Areas/BusinessManage/Views/BusinessSystem/SystemParameterManage.cshtml
+++ b/LeaRun.Application/LeaRun.Application.Web/Areas/BusinessManage/Views/BusinessSystem/SystemParameterManage.cshtml
@@ -1,5 +1,208 @@
 ﻿@{
-    ViewBag.Title = "SystemParameterManage";
+    ViewBag.Title = "诺博业务系统参数管理";
+    Layout = "~/Views/Shared/_Index.cshtml";
 }
+<script>
+    $(function () {
+        //GetSchemeType();
+        GetGrid();
+        GetGrid1();
+        InitialPage();
+    });
 
-<h2>SystemParameterManage</h2>
+    //初始化页面
+    //function InitialPage() {
+    //    //resize重设(表格、树形)宽高
+    //    $(window).resize(function (e) {
+    //        window.setTimeout(function () {
+    //            $('#gridTable').setGridWidth(($('.gridPanel').width()));
+    //            $("#gridTable").setGridHeight($(window).height() - 136.5);
+    //        }, 200);
+    //        e.stopPropagation();
+    //    });
+    //}
+    //初始化页面
+    function initialPage() {
+        //resize重设(表格、树形)宽高
+        $(window).resize(function (e) {
+            window.setTimeout(function () {
+                resizePage();
+            },
+                200);
+            e.stopPropagation();
+        });
+        resizePage();
+    }
+
+    function resizePage() {
+        $("#gridTable").setGridHeight($(window).height() - 135);
+        $('#gridTable').setGridWidth(($('.gridPanel').width() - 2));
+    };
+
+    //加载树
+    function GetSchemeType() {
+        //加载药品标准库类型
+        $.SetForm({
+            url: "../../DrugConsumableManage/DrugManage/GetDrugType",
+            param: {},
+            success: function (data) {
+                $.each(data, function (id, item) {
+                    var row = '<li><a data-value="' + item.ItemValue + '">' + item.ItemText + '</a></li>';
+                    $('#Year').find('ul').append(row);
+                });
+                //年度选中，生成查询条件
+                $("#Year .dropdown-menu li").click(function () {
+                    var text = $(this).find('a').html();
+                    var value = $(this).find('a').attr('data-value');
+                    $("#Year .dropdown-text").html(text).attr('data-value', value);
+                });
+            }
+        });
+    }
+
+    var selectedRowIndex = 0;
+
+    //加载表格
+    function GetGrid() {
+        var $gridTable = $("#gridTable");
+        $gridTable.jqGrid({
+            url: "../../BusinessManage/BusinessSystem/GetSystemParameters",
+            datatype: "json",
+            height: $(window).height() - 136.5,
+            autowidth: true,
+            colModel: [
+                { label: "参数代码", name: "Par_Code", index: "Par_Code", lign: "center" },
+                { label: "参数名称", name: "Par_Name", index: "Par_Name", align: "center" },
+                { label: "参数说明", name: "Par_Coment", index: "Par_Coment", align: "center" },
+                { label: "参数值域", name: "Par_Value_Key", index: "Par_Value_Key", align: "center" },
+                { label: "参数默认值", name: "Par_Value_Defult_Value", index: "Par_Value_Defult_Value", align: "center" },
+            ],
+            viewrecords: true,//显示检索记录
+            rowNum: 30,//每页数量，Pagination的字段rows
+            rowList: [30, 50, 100],
+            pager: "#gridPager",
+            sortname: 'Par_Code',//排序字段，Pagination的字段sidx，分页必须传
+            sortorder: 'desc',//排序方式，Pagination的字段sord，默认asc
+            rownumbers: true,//是否显示自增序号
+            gridview: true,
+            onSelectRow: function () {
+                selectedRowIndex = $("#" + this.id).getGridParam('selrow');
+            },
+            gridComplete: function () {
+                $("#" + this.id).setSelection(selectedRowIndex, false);
+            }
+        });
+        //$gridTable.authorizeColModel($('.gridPanel').width());
+        //查询事件
+        $("#btn_Search").click(function () {
+            var queryJson = {
+                year: $("#Year").find('.dropdown-text').attr('data-value'),
+            };
+            $gridTable.jqGrid('setGridParam', {
+                postData: { queryJson: JSON.stringify(queryJson) },
+                //保证搜索时是第一页
+                page: 1
+            }).trigger('reloadGrid');
+        });
+    }
+
+    //加载表格
+    function GetGrid1() {
+        var $gridTable1 = $("#gridTable1");
+        $gridTable1.jqGrid({
+            url: "../../BusinessManage/BusinessSystem/GetCodeList",
+            //postData: { "queryJson": '{ "typeid": "' + typeId + '" }' },
+            datatype: "json",
+            height: $(window).height() - 136.5,
+            autowidth: true,
+            colModel: [
+                { label: "类别编号", name: "TYPEID", index: "TYPEID", hidden: true },
+                { label: "版本号", name: "VERID", index: "VERID", hidden: true },
+                { label: "代码", name: "CODE", index: "CODE", width: 150 },
+                { label: "名称", name: "NAME", index: "NAME", width: 500 },
+                { label: "显示顺序", name: "IX", index: "IX", align: "center", width: 60 },
+            ],
+            viewrecords: true,//显示检索记录
+            rowNum: 30,//每页数量，Pagination的字段rows
+            rowList: [30, 50, 100],
+            pager: "#gridPager",
+            sortname: 'IX',//排序字段，Pagination的字段sidx，分页必须传
+            sortorder: 'asc',//排序方式，Pagination的字段sord，默认asc
+            rownumbers: true,//是否显示自增序号
+            gridview: true,
+            onSelectRow: function () {
+                selectedRowIndex = $("#" + this.id).getGridParam('selrow');
+            },
+            gridComplete: function () {
+                $("#" + this.id).setSelection(selectedRowIndex, false);
+            }
+        });
+    }
+
+    //新增
+    function btn_add() {
+        dialogOpen({
+            id: "Form",
+            title: '新增业务系统信息',
+            url: '/DrugConsumableManage/DrugManage/DrugStandardEdit',
+            width: "500px",
+            height: "400px",
+            callBack: function (iframeId) {
+                top.frames[iframeId].AcceptClick();
+            }
+        });
+    };
+    //编辑
+    function btn_edit() {
+        dialogOpen({
+            id: "Form",
+            title: '修改业务系统信息',
+            url: '/DrugConsumableManage/DrugManage/DrugStandardEdit',
+            width: "500px",
+            height: "400px",
+            callBack: function (iframeId) {
+                top.frames[iframeId].AcceptClick();
+            }
+        });
+
+    }
+    //删除
+    function btn_delete() {
+
+    }
+</script>
+
+<div class="ui-layout" id="layout" style="height: 100%; width: 100%;">
+    <div class="center-Panel">
+        <div class="title-search">
+            <table>
+                <tr>
+                    <td>
+                        <input id="txt_Keyword" type="text" class="form-control" placeholder="请输入系统名称或系统编码" style="width: 200px;" />
+                    </td>
+                    <td style="padding-left: 5px;">
+                        <a id="btn_Search" class="btn btn-primary"><i class="fa fa-search"></i>&nbsp;查询</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="toolbar">
+            <div class="btn-group">
+                <a id="lr-add" class="btn btn-default" onclick="btn_add()"><i class="fa fa-plus"></i>&nbsp;新增</a>
+                <a id="lr-edit" class="btn btn-default" onclick="btn_edit()"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
+                <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
+            </div>
+        </div>
+    </div>
+    <div class="gridPanel" id="baseCode">
+        <div class="codeTable" id="codeType" style="float: left; padding-right: 10px; overflow-x: auto; width: 50%">
+            <table id="gridTable"></table>
+            <div id="codeKindPager"></div>
+        </div>
+
+        <div class="codeTable" id="codeDetail" style="float: left; overflow-x: auto; width: 50%">
+            <table id="gridTable1"></table>
+            <div id="codeDetailPager"></div>
+        </div>
+    </div>
+</div>
